--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <a href="about.html">About Us</a>
                     <a href="faq.html">FAQ</a>
                     <a href="contact.html">Support</a>
-                    <a href="signin.html">Sign In</a>
+                    <a href="base.html">Sign In</a>
                 </div>
             </div>
             <div class="search-container">
