--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <a href="about.html">About Us</a>
                     <a href="faq.html">FAQ</a>
                     <a href="contact.html">Support</a>
-                    <a href="base.html">Sign In</a>
+                    <a href="signin.html">Sign In</a>
                 </div>
             </div>
             <div class="search-container">
@@ -285,7 +285,7 @@
             <button type="submit">Subscribe</button>
         </form>
         <div id="subscriptionMessage"></div>
-        <p>&copy; 2024 <img src="logo.jpg" alt="Footer Logo" class="footer-logo"> Learn Computer Online. All rights reserved.</p>
+        <p>&copy; 2024 <!-- <img src="logo.jpg" alt="Footer Logo" class="footer-logo"> --> Learn Computer Online. All rights reserved.</p>
     </footer>
 
     <!-- Modal Structure -->
@@ -337,4 +337,4 @@
         // Clear the input field
         this.reset();
     });
-</script>
+            </script>
